Disable auto* and spellcheck for prompt input

--- a/lib/web/templates/play/show.html.eex
+++ b/lib/web/templates/play/show.html.eex
@@ -1,4 +1,4 @@
 <div class="panel">
   <pre><code id="terminal"></code></pre>
 </div>
-<input type="text" id="prompt" autofocus="autofocus" />
+<input type="text" id="prompt" autofocus="autofocus" autocorrect="off" autocapitalize="off" spellcheck="false" />
