--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -57,6 +57,12 @@
                 <span>Items</span>
               <% end %>
             </li>
+            <li class="<%= tab_selected(@conn, "npcs") %>">
+              <%= link(to: npc_path(@conn, :index)) do %>
+                <i class="fa fa-address-card"></i>
+                <span>NPCs</span>
+              <% end %>
+            </li>
             <li class="<%= tab_selected(@conn, "users") %>">
               <%= link(to: user_path(@conn, :index)) do %>
                 <i class="fa fa-users"></i>
