--- a/lib/web/templates/admin/npc/show.html.eex
+++ b/lib/web/templates/admin/npc/show.html.eex
@@ -51,4 +51,41 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Zone Spawners</h3>
+          <div class="box-tools">
+            <%= link("New Spawner", to: npc_spawner_path(@conn, :new, @npc.id), class: "btn btn-primary") %>
+          </div>
+        </div>
+        <div class="box-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Zone</th>
+                <th>Room</th>
+                <th>Interval</th>
+                <td>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= Enum.map @npc.zone_npcs, fn (zone_npc) -> %>
+                <tr>
+                  <td><%= zone_npc.id %></td>
+                  <td><%= link(zone_npc.zone.name, to: zone_path(@conn, :show, zone_npc.zone_id)) %></td>
+                  <td><%= link(zone_npc.room.name, to: room_path(@conn, :show, zone_npc.room_id)) %></td>
+                  <td><%= zone_npc.spawn_interval %></td>
+                  <td></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
