--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -48,16 +48,6 @@
                 <th>Last Save</th>
                 <td><%= @room.updated_at %></td>
               </tr>
-              <tr>
-                <th>NPCs</th>
-                <td>
-                  <ul>
-                    <%= Enum.map @npcs, fn (npc_spawner) -> %>
-                      <li><%= npc_spawner.npc.name %></li>
-                    <% end %>
-                  </ul>
-                </td>
-              </tr>
             </tbody>
           </table>
         </div>
@@ -118,6 +108,34 @@
                   <td><%= link(room_item.item.name, to: item_path(@conn, :show, room_item.item_id)) %></td>
                   <td><%= room_item.spawn_interval %></td>
                   <td><%= link("Delete", to: room_item_path(@conn, :delete, room_item.id), method: :delete) %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">NPC Spawns</h3>
+        </div>
+        <div class="box-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Spawn Interval</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= Enum.map @room.npc_spawners, fn (npc_spawner) -> %>
+                <tr>
+                  <td><%= link(npc_spawner.npc.name, to: npc_path(@conn, :show, npc_spawner.npc_id)) %></td>
+                  <td><%= npc_spawner.spawn_interval %></td>
                 </tr>
               <% end %>
             </tbody>
