--- a/lib/web/templates/admin/npc_spawner/_form.html.eex
+++ b/lib/web/templates/admin/npc_spawner/_form.html.eex
@@ -5,17 +5,19 @@
 
   <%= form_for @changeset, @path, fn (f) -> %>
     <div class="box-body">
-      <div class="form-group">
-        <%= label f, :zone_id %>
-        <%= select f, :zone_id, Zone.all() |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
-        <%= error_tag f, :zone_id %>
-      </div>
+      <%= if @new do %>
+        <div class="form-group">
+          <%= label f, :zone_id %>
+          <%= select f, :zone_id, Zone.all() |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+          <%= error_tag f, :zone_id %>
+        </div>
 
-      <div class="form-group">
-        <%= label f, :room_id %>
-        <%= select f, :room_id, Zone.room_exits(), class: "form-control" %>
-        <%= error_tag f, :room_id %>
-      </div>
+        <div class="form-group">
+          <%= label f, :room_id %>
+          <%= select f, :room_id, Zone.room_exits(), class: "form-control" %>
+          <%= error_tag f, :room_id %>
+        </div>
+      <% end %>
 
       <div class="form-group">
         <%= label f, :spawn_interval %>
