--- a/lib/web/templates/admin/skill/show.html.eex
+++ b/lib/web/templates/admin/skill/show.html.eex
@@ -29,6 +29,10 @@
           <table class="table">
             <tbody>
               <tr>
+                <th>Level</th>
+                <td><%= @skill.level %></td>
+              </tr>
+              <tr>
                 <th>Name</th>
                 <td><%= @skill.name %></td>
               </tr>
