--- a/lib/web/templates/admin/skill/_form.html.eex
+++ b/lib/web/templates/admin/skill/_form.html.eex
@@ -6,6 +6,12 @@
   <%= form_for @changeset, @path, fn (f) -> %>
     <div class="box-body">
       <div class="form-group">
+        <%= label f, :level %>
+        <%= number_input f, :level, class: "form-control" %>
+        <%= error_tag f, :level %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :name %>
         <%= text_input f, :name, class: "form-control" %>
         <%= error_tag f, :name %>
