--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -31,11 +31,11 @@
               </tr>
               <tr>
                 <th>Stats</th>
-                <td><pre><%= @item |> stats() %></pre></td>
+                <td><pre><%= @item |> json_field(:stats) %></pre></td>
               </tr>
               <tr>
                 <th>Effects</th>
-                <td><pre><%= @item |> effects() %></pre></td>
+                <td><pre><%= @item |> json_field(:effects) %></pre></td>
               </tr>
             </tbody>
           </table>
