--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -30,6 +30,13 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :drop_rate %>
+        <%= number_input f, :drop_rate, class: "form-control" %>
+        <%= error_tag f, :drop_rate %>
+        <span class="help-block">Enter a number from 0-100</span>
+      </div>
+
+      <div class="form-group">
         <%= label f, :stats %>
         <%= textarea f, :stats, value: @changeset |> json_field(:stats), class: "form-control", rows: 5 %>
         <%= error_tag f, :stats %>
