Rooms have currency in them
- Admin edit
- Display in look
- Pick up currency

--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -41,6 +41,10 @@
                 <td><%= @room.description %></td>
               </tr>
               <tr>
+                <th>Currency in Room</th>
+                <td><%= @room.currency %> <%= currency() %></td>
+              </tr>
+              <tr>
                 <th>Coorinates</th>
                 <td><%= @room.x %>, <%= @room.y %></td>
               </tr>
