--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -18,6 +18,12 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :currency %>
+        <%= number_input f, :currency, class: "form-control" %>
+        <%= error_tag f, :currency %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :x %>
         <%= text_input f, :x, class: "form-control" %>
         <%= error_tag f, :x %>
