--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -19,8 +19,14 @@
 
       <div class="form-group">
         <%= label f, :experience_points %>
-        <%= text_input f, :experience_points, class: "form-control" %>
+        <%= number_input f, :experience_points, class: "form-control" %>
         <%= error_tag f, :experience_points %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :currency, currency() |> String.capitalize() %>
+        <%= number_input f, :currency, class: "form-control" %>
+        <%= error_tag f, :currency %>
       </div>
 
       <div class="form-group">
