--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -18,7 +18,7 @@
       </div>
 
       <div class="form-group">
-        <%= label f, :currency %>
+        <%= label f, :currency, currency() |> String.capitalize() %>
         <%= number_input f, :currency, class: "form-control" %>
         <%= error_tag f, :currency %>
       </div>
