--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -41,8 +41,8 @@
                 <td><%= @room.description %></td>
               </tr>
               <tr>
-                <th>Currency in Room</th>
-                <td><%= @room.currency %> <%= currency() %></td>
+                <th><%= currency() |> String.capitalize() %> in Room</th>
+                <td><%= @room.currency %></td>
               </tr>
               <tr>
                 <th>Coorinates</th>
