--- a/lib/web/templates/admin/class/show.html.eex
+++ b/lib/web/templates/admin/class/show.html.eex
@@ -43,8 +43,8 @@
               <td><%= @class.points_abbreviation %></td>
             </tr>
             <tr>
-              <th>Starting Stats</th>
-              <td><pre><%= @class.starting_stats |> Poison.encode!(pretty: true) %></pre></td>
+              <th>Stats for each level</th>
+              <td><pre><%= @class.each_level_stats |> Poison.encode!(pretty: true) %></pre></td>
             </tr>
             <tr>
               <th>Regen Health</th>
