--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -19,6 +19,10 @@
                 <td><%= @user.name %></td>
               </tr>
               <tr>
+                <th>Race</th>
+                <td><%= @user.race.name %></td>
+              </tr>
+              <tr>
                 <th>Class</th>
                 <td><%= @user.class.name %></td>
               </tr>
