--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -75,6 +75,12 @@
                 <span>NPCs</span>
               <% end %>
             </li>
+            <li class="<%= tab_selected(@conn, "races") %>">
+              <%= link(to: race_path(@conn, :index)) do %>
+                <i class="fa fa-eye"></i>
+                <span>Races</span>
+              <% end %>
+            </li>
             <li class="<%= tab_selected(@conn, "users") %>">
               <%= link(to: user_path(@conn, :index)) do %>
                 <i class="fa fa-users"></i>
