--- a/lib/web/templates/admin/race/index.html.eex
+++ b/lib/web/templates/admin/race/index.html.eex
@@ -17,6 +17,11 @@
   <div class="row">
     <div class="col-md-12">
       <div class="box">
+        <div class="box-header">
+          <div class="box-tools">
+            <%= link("New Race", to: race_path(@conn, :new), class: "btn btn-primary") %>
+          </div>
+        </div>
         <div class="box-body">
           <table class="table">
             <thead>
