--- a/lib/web/templates/admin/race/show.html.eex
+++ b/lib/web/templates/admin/race/show.html.eex
@@ -20,6 +20,9 @@
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
+          <div class="box-tools">
+            <%= link("Edit", to: race_path(@conn, :edit, @race.id), class: "btn btn-primary") %>
+          </div>
         </div>
         <div class="box-body">
           <table class="table">
