Add a teleport link to the dashboard connected list
Also link to the player's show page

--- a/lib/web/templates/admin/dashboard/index.html.eex
+++ b/lib/web/templates/admin/dashboard/index.html.eex
@@ -56,7 +56,10 @@
         <div class="box-body">
           <ul class="list-group">
             <%= Enum.map(@players, fn (player) -> %>
-              <li class="list-group-item"><%= player.name %></li>
+              <li class="list-group-item">
+                <%= link(player.name, to: user_path(@conn, :show, player.id)) %>
+                <%= link("Teleport to", to: user_path(@conn, :teleport, room_id: player.save.room_id), method: "post", class: "pull-right") %>
+              </li>
             <% end) %>
           </ul>
         </div>
