Allow sign in to the game via user token

--- a/lib/web/templates/layout/play.html.eex
+++ b/lib/web/templates/layout/play.html.eex
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
-  <body>
+  <body id="body" data-user-token="<%= @conn |> user_token() %>">
     <%= render @view_module, @view_template, assigns %>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
