--- a/lib/web/templates/admin/zone/index.html.eex
+++ b/lib/web/templates/admin/zone/index.html.eex
@@ -44,6 +44,8 @@
               <% end %>
             </tbody>
           </table>
+
+          <%= render(SharedView, "_pagination.html", path: zone_path(@conn, :index), pagination: @pagination) %>
         </div>
       </div>
     </div>
