--- a/lib/web/templates/admin/room_exit/new.html.eex
+++ b/lib/web/templates/admin/room_exit/new.html.eex
@@ -47,4 +47,27 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Map</h3>
+        </div>
+        <div class="box-body">
+          <table class="table map">
+            <%= Enum.map(map(@zone), fn (row) -> %>
+              <tr>
+                <%= Enum.map(row, fn ({{x, y}, nil}) -> %>
+                  <td><span class="empty"></span></td>
+                <% ({_, room}) -> %>
+                  <td><span class="btn btn-success"><%= room.id %> - <%= room.name %></span></td>
+                <% end) %>
+              </tr>
+            <% end) %>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
