Limit what exits get shown when creating a new room exit
Only show rooms outside of the current zone that are marked as leaving
the zone.

--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -34,6 +34,13 @@
         <%= text_input f, :y, class: "form-control" %>
         <%= error_tag f, :y %>
       </div>
+
+      <div class="checkbox">
+        <%= label f, :is_zone_exit do %>
+          <%= checkbox f, :is_zone_exit %> Is A Zone Exit?
+        <% end %>
+        <%= error_tag f, :is_zone_exit %>
+      </div>
     </div>
 
     <div class="box-footer">
