--- a/lib/web/templates/help/command.html.eex
+++ b/lib/web/templates/help/command.html.eex
@@ -7,13 +7,15 @@
         <code><%= command %></code>
       <% end) %>
     </p>
-    <p>
-      Aliases:
-      <%= Enum.map(@command.aliases(), fn (alias) -> %>
-        <code><%= alias %></code>
-      <% end) %>
-    </p>
-    <p><%= @command.help.full |> String.replace("\n", "<br />") |> raw() %></p>
+    <%= if @command.aliases |> length() > 0 do %>
+      <p>
+        Aliases:
+        <%= Enum.map(@command.aliases(), fn (alias) -> %>
+          <code><%= alias %></code>
+        <% end) %>
+      </p>
+    <% end %>
+    <p><pre><%= @command.help.full |> Color.strip_color() |> String.replace("\n", "<br />") |> raw() %></pre></p>
   </div>
 </div>
 
