Display a different color for the current room when selecting an exit

--- a/lib/web/templates/admin/room_exit/new.html.eex
+++ b/lib/web/templates/admin/room_exit/new.html.eex
@@ -61,7 +61,13 @@
                 <%= Enum.map(row, fn ({_, nil}) -> %>
                   <td><span class="empty"></span></td>
                 <% ({_, room}) -> %>
-                  <td><span class="btn btn-success"><%= room.id %> - <%= room.name %></span></td>
+                  <td>
+                    <%= if @room.id == room.id do %>
+                      <span class="btn btn-default"><%= room.id %> - <%= room.name %></span>
+                    <% else %>
+                      <span class="btn btn-success"><%= room.id %> - <%= room.name %></span>
+                    <% end %>
+                  </td>
                 <% end) %>
               </tr>
             <% end) %>
